--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,25 @@
 {
+  "name": "ai-review-management-backend",
+  "version": "1.0.0",
+  "description": "AI Review Management System Backend with Google Sheets Database",
+  "main": "server.js",
   "dependencies": {
+    "axios": "^1.13.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "nodemon": "^3.1.11"
+    "googleapis": "^170.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^9.1.3",
+    "nodemon": "^3.1.11",
+    "openai": "^6.16.0"
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seed": "node seed.js",
+    "test": "node test-api.js"
   }
 }
